# emuscribe

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  IMPROVEMENTS_SUMMARY.md  LICENSE  MANIFEST.in  PERFORMANCE_COMPARISON.md  README.md  USAGE.md  config.json  install.sh  main.py  mise.toml  package-lock.json  pyproject.toml  requirements.txt  run.sh  transcribe
.github/workflows/: publish.yml
hooks/: pre-commit
src/emuscribe/: __init__.py  cli.py  transcriber.py
